--- a/app/src/main/res/drawable/drop_off_drawable.xml
+++ b/app/src/main/res/drawable/drop_off_drawable.xml
@@ -1,4 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-</selector>
+    <corners android:topRightRadius="12dp"
+             android:topLeftRadius="12dp"/>
+
+       <solid android:color="@color/white"/>
+
+        <stroke android:width="1dp"
+               android:color="#E6E6E6"/>
+
+
+
+</shape>
