--- a/app/src/main/res/drawable/enter_number.xml
+++ b/app/src/main/res/drawable/enter_number.xml
@@ -1,4 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-</selector>
+    <corners android:radius="6dp"/>
+
+       <solid android:color="#E4E3E3"/>
+
+
+        <stroke android:color="#E4E3E3"
+                 android:width="1dp"/>
+
+
+
+</shape>
