--- a/app/src/main/res/drawable/pick_location.xml
+++ b/app/src/main/res/drawable/pick_location.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-</selector>
+    <corners android:radius="10dp"/>
+
+     <solid android:color="#9112517E"/>
+
+       <stroke android:color="#1FFFFFFF"
+               android:width="1dp"/>
+
+
+
+</shape>
