--- a/app/src/main/res/drawable/see_on_map.xml
+++ b/app/src/main/res/drawable/see_on_map.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-</selector>
+    <corners android:bottomRightRadius="8dp"
+              android:bottomLeftRadius="8dp"/>
+
+      <solid android:color="@color/white"/>
+
+       <stroke android:color="#E4E3E3"
+             android:width="1dp"/>
+
+</shape>
