--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,4 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+
+
+   <item android:id="@+id/home"
+         android:icon="@drawable/ic_home"
+       android:title="Home"
+        />
+
+      <item android:id="@+id/support"
+             android:icon="@drawable/ic_support"
+           android:title="Support"
+           />
+
+       <item android:id="@+id/transactions"
+              android:icon="@drawable/ic_transactions"
+              android:title="Transactions"
+            />
+
+           <item android:id="@+id/notifications"
+                 android:icon="@drawable/ic_notification"
+                  android:title="Notifications"
+                />
+
 </menu>
